force-app/main/default/objects/LLC_BI__Tenant_Information__c/fields/LLC_BI__Break_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Break_Date__c</fullName>
    <description>The user populates this optional date field to set the break date of the lease that has been agreed upon with the involved parties. The timing of the break date can depend on the length of the term of the lease.</description>
    <label>Break Date</label>
    <type>Date</type>
</CustomField>