force-app/main/default/objects/LLC_BI__Tenant_Information__c/fields/LLC_BI__Collateral__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Collateral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user populates this optional lookup field to reference the collateral that is associated with the tenancy. The system automatically populates the field if the user created the object from a collateral.</description>
    <label>Collateral</label>
    <referenceTo>LLC_BI__Collateral__c</referenceTo>
    <relationshipLabel>Tenancies</relationshipLabel>
    <relationshipName>Tenancies</relationshipName>
    <type>Lookup</type>
</CustomField>