force-app/main/default/objects/LLC_BI__Tenant_Information__c/fields/LLC_BI__Exclude__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Exclude__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users select this optional checkbox field to exclude tenant information from rent roll calculations. By default, it is deselected.</description>
    <label>Exclude</label>
    <type>Checkbox</type>
</CustomField>