force-app/main/default/objects/LLC_BI__Tenant_Information__c/fields/LLC_BI__Is_Total__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Total__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The system automatically selects this boolean field. If selected, the Tenant Information contains total values for the associated Schedule Sections. If deselected, the Tenant Information contains manually entered or calculated values. By default, it is deselected.</description>
    <label>Is Total</label>
    <type>Checkbox</type>
</CustomField>