force-app/main/default/objects/LLC_BI__Tenant_Information__c/fields/LLC_BI__Lease_Origination__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Lease_Origination__c</fullName>
    <label>Lease Origination</label>
    <type>DateTime</type>
</CustomField>