force-app/main/default/objects/LLC_BI__Tenant_Information__c/fields/LLC_BI__Parent_Tenant_Information__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Parent_Tenant_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Recursive lookup to signify non-primary scenario</description>
    <label>Parent Tenant Information</label>
    <referenceTo>LLC_BI__Tenant_Information__c</referenceTo>
    <relationshipLabel>Tenant Information</relationshipLabel>
    <relationshipName>Child_Tenant_Information</relationshipName>
    <type>Lookup</type>
</CustomField>