force-app/main/default/objects/LLC_BI__Tenant_Information__c/fields/LLC_BI__Price_Per_Sq_Ft_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Price_Per_Sq_Ft_Per_Year__c</fullName>
    <description>Users populate this optional currency field to indicate the yearly price per area unit.</description>
    <label>Price Per Area Unit Per Year</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>