force-app/main/default/objects/LLC_BI__Tenant_Information__c/fields/LLC_BI__Rent_Roll__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Rent_Roll__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>The system automatically populates this optional lookup field with the associated tenant information for a rent roll.</description>
    <label>Rent Roll</label>
    <referenceTo>LLC_BI__Rent_Roll__c</referenceTo>
    <relationshipLabel>Tenant Information</relationshipLabel>
    <relationshipName>Tenant_Information</relationshipName>
    <type>Lookup</type>
</CustomField>