force-app/main/default/objects/LLC_BI__Tenant_Information__c/fields/LLC_BI__Searchable_Tenant__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Searchable_Tenant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This determines whether or not the the tenant name field for this tenant should appear in the rent roll fuzzy search type ahead</description>
    <label>Searchable Tenant</label>
    <type>Checkbox</type>
</CustomField>