force-app/main/default/objects/LLC_BI__Tenant_Information__c/fields/LLC_BI__Spread_Statement_Template__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Spread_Statement_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which statement does this tenant belong to. This is used to template-ize rent rolls, and is not required to be set on actual tenant info data.</description>
    <label>Spread Statement Template</label>
    <referenceTo>LLC_BI__Spread_Statement_Type__c</referenceTo>
    <relationshipLabel>Tenant Information</relationshipLabel>
    <relationshipName>Tenant_Information</relationshipName>
    <type>Lookup</type>
</CustomField>