force-app/main/default/objects/LLC_BI__Tenant_Information__c/fields/LLC_BI__Sq_Feet__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Sq_Feet__c</fullName>
    <description>Users populate this optional number field to indicate the total square measurement of floor space in square units.</description>
    <label>Floor Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>