force-app/main/default/objects/LLC_BI__Tenant_Information__c/fields/LLC_BI__Tenant_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Tenant_Type__c</fullName>
    <description>What type of tenant is this one</description>
    <label>Tenant Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>